correcao das dependencias spring boot

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,4 +1,6 @@
 # =~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=
-#  PROFILE
+#  API
 # =~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=
-spring.profiles.active=local
+logging.level.root=INFO
+app.timezone=America/Sao_Paulo
+server.port=9090
