--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# =~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=
-#  PROFILE
-# =~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=
-spring.profiles.active=local
+# --------------------
+# Default profile
+# --------------------
+spring.profiles.active=dev
